# QQ

./: .gitignore  CMakeLists.txt  LICENSE  LocalMessage.md  QQMain.cpp  QQMain.h  README.md  main.cpp
QQBackendNetServices/: CMakeLists.txt
QQBackendNetServices/include/: QQHandleMessage.h  qglobalvalue.h
QQBackendNetServices/src/: QQHandleMessage.cpp  main.cpp  qglobalvalue.cpp
QQDesktop/: CMakeLists.txt
QQDesktop/include/: QMCircleSingleView.h  QMSkinDesSingleView.h  QQActionTabBar.h  QQAppBar.h  QQAppendFriendOrGroupDialog.h  QQAppendNeedInformationWidget.h  QQChatAudioView.h  QQChatEmojiView.h  QQChatMessageSingleView.h  QQCustomDelegate.h  QQDesktop.h  QQInformationListWidget.h  QQMessageDialog.h  QQOptionFillButton.h  QQScrollerPixelListView.h  QQSearchHistoryLabel.h  QQSinglePeopleWidget.h  base.h  qconfig.h  qdefine.h  qfunction.hpp  qglobalvalue.h  qtheme.hpp
QQDesktop/resource/: QQDesktop.qrc  QQDesktop.ui
QQDesktop/src/: QMCircleSingleView.cpp  QMSkinDesSingleView.cpp  QQActionTabBar.cpp  QQAppBar.cpp  QQAppendFriendOrGroupDialog.cpp  QQAppendNeedInformationWidget.cpp  QQChatAudioView.cpp  QQChatEmojiView.cpp  QQChatMessageSingleView.cpp  QQCustomDelegate.cpp  QQDesktop.cpp  QQInformationListWidget.cpp  QQMessageDialog.cpp  QQOptionFillButton.cpp  QQScrollerPixelListView.cpp  QQSearchHistoryLabel.cpp  QQSinglePeopleWidget.cpp  main.cpp  qcustomplot.cpp  qglobalvalue.cpp
QQLoginWidget/: CMakeLists.txt
QQLoginWidget/include/: QMStackedWidget.h  QQLoginWidget.h  qdefine.h  qfunction.hpp  qglobalvalue.h
QQLoginWidget/resource/: QQLoginWidget.qrc  QQLoginWidget.ui
QQLoginWidget/src/: QMStackedWidget.cpp  QQLoginWidget.cpp  main.cpp  qglobalvalue.cpp
audio/: QQAudio.cpp  QQAudio.h
chat/: QQChat.cpp  QQChat.h  QQChatIndexDelegate.cpp  QQChatIndexDelegate.h  QQChatMessageDelegate.cpp  QQChatMessageDelegate.h
common/: README.md  common.drawio  qqbase.h  qqconfig.h  qqdefine.h  qqenum.h  qqenums.h  qqfunction.cpp  qqfunction.h  qqglobal.cpp  qqglobal.h  qqtheme.cpp  qqtheme.h  qqwidget.cpp  qqwidget.h
emoji/: QQEmoji.cpp  QQEmoji.h  QQEmojiLab.cpp  QQEmojiLab.h
file/: QQFile.cpp  QQFile.h
friend/: QQFriend.cpp  QQFriend.h  QQFriendAddDialog.cpp  QQFriendAddDialog.h  QQFriendIndexDelegate.cpp  QQFriendIndexDelegate.h  QQFriendInfo.cpp  QQFriendInfo.h  QQFriendValidateInfo.cpp  QQFriendValidateInfo.h
login/: QQLogin.cpp  QQLogin.h
network/: QQNetwork.cpp  QQNetwork.h
resource/: QQ.qrc  README.md  struct.drawio  sturct.drawio
set/: QQSet.cpp  QQSet.h
storage/: QQStorage.cpp  QQStorage.h
system/: QQSystem.cpp  QQSystem.h
ui/: QQChat.ui  QQDesktop.ui  QQFriend.ui  QQLogin.ui  QQMain.ui
